Update media queries to fix bug where Contact section is hidden behind Projects section

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -6,6 +6,10 @@
   .about-containers {
     flex-wrap: wrap;
   }
+  #contact,
+  #projects {
+    height: fit-content;
+  }
 }
 
 @media screen and (max-width: 1200px) {
